--- a/NUOPC/team/danrosen25/Proto/SampleCapProto/README
+++ b/NUOPC/team/danrosen25/Proto/SampleCapProto/README
@@ -1,26 +1,55 @@
-README for single Model NUOPC prototype
----------------------------------------
+README for Sample Driver + Sample Model Cap NUOPC prototype
+-----------------------------------------------------------
 
 Dependencies:
-  - ESMF v7.0.0 beta
+  - ESMF v7.0.0
   
 Build:
   - Set environment variable ESMFMKFILE to point to the esmf.mk of your ESMF
     installation.
-  - gmake
+  - gmake          - Builds application with COMP1_MK=sample_cap.mk
+  - gmake DEBUG=on - Builds application with COMP1_MK=sample_cap.mk and 
+                     debugging information.
   
+Runtime Configuration
+  - Set runtime configuration in sample.rc
+  - driver_name                  - Driver's name (default: DRIVER)
+  - <DRIVER_NAME>_component_list - Driver's component list
+  - <DRIVER_NAME>_attributes     - Driver's attributes
+      verbosity                  - Driver's verbosity
+      time_step_seconds          - Driver's time step
+      step_count                 - Driver's step count
+  - <COMPONENT>_mod              - Component's module name
+  - <COMPONENT>_name             - Component's name
+  - <COMPONENT>_attributes       - Component's attributes
+      verbosity                  - Component's verbosity
+      time_step_seconds          - Component's time step
+      coupled_forcing            - Component's forcing mode
+      realize_all_export         - Realize all export fields in component
+      restart_seconds            - Components's restart file write interval
+
 Execution:
   - Optionally set environment variable ESMF_RUNTIME_COMPLIANCECHECK to ON.
-  - mpirun -np X ./esmApp (where X is the total number of PETs)
-  
+  - mpirun -np X ./sample_app.exe (where X is the total number of PETs)
+
 Output:
   - PET*.Log files containing compliance checker output if turned on.
-  - The prototype outputs time stepping information to stdout.
-  
-
+  - The prototype outputs realized import and export state data at
+    restart_seconds
 
 Code structure:
-  - Makefile    - Makefile that is based on the standard esmf.mk mechanism.
-  - model.F90   - The MODEL component, specializing generic NUOPC_Model.
-  - driver.F90  - Driver specializing NUOPC_Driver, driving the single MODEL.
-  - mainApp.F90 - Main application cap.
+  - makefile            - Makefile used to build or clean sample app and sample
+                          model cap.
+  - makefile.app        - Makefile used to build or clean sample app
+  - makefile.sample_cap - Makefile used to build or clean sample cap
+  - makefile.model      - Makefile used to build or clean sample model
+  - sample_app.F90      - Main application
+  - sample_driver.F90   - Driver specializing NUOPC_Driver, driving components 
+                          listed in runtime configuration file.
+  - sample_cap.F90      - Model specializing NUOPC_Model, wraps model domain, 
+                          fields, initialization, run, and finalize with NUOPC
+                          compliant entry points.
+  - model_drv.F90       - The sample model
+  - model_fld.F90       - The fields for the sample model
+  - model_dom.F90       - The domain for the sample model
+
